user-service/eks-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: from0tocloud-backend
  labels:
    app: user-service-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: user-service
        image: 129822709161.dkr.ecr.eu-west-1.amazonaws.com/user-service:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8100
