user-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: from0tocloud-backend
  labels:
    app: user-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: user-service
        image: 129822709161.dkr.ecr.eu-west-1.amazonaws.com/user-service:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8100
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: from0tocloud-backend
  labels:
    app: user-service-app
spec:
  # type: LoadBalancer
  selector:
    app: user-service-app
  ports:
    - name: user-service
      port: 8100
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: from0tocloud-backend
#   name: user-service-ingress
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /*
#             pathType: Prefix
#             backend:
#               service:
#                 name: user-service
#                 port: 
#                   number: 8100
