user-service/eks-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: from0tocloud-backend
  labels:
    app: user-service-app
spec:
  type: LoadBalancer
  selector:
    app: user-service-app
  ports:
    - protocol: TCP
      port: 8100
      targetPort: 8100
